owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_fn_definition-3.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_unit(\"fn recursion() {\n                return recursion();\n            }\")"
---
CompilationUnit {
    entry_file_name: "<test>",
    functions: [
        Stmt {
            kind: Fn {
                proto: FnProto {
                    args: [],
                    iden: "recursion",
                },
                body: Some(
                    Block {
                        stmts: [
                            Stmt {
                                kind: Return {
                                    value: Expr {
                                        kind: FuncCall {
                                            callee: "recursion",
                                            args: [],
                                        },
                                    },
                                },
                            },
                        ],
                    },
                ),
            },
        },
    ],
}
