owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_fn_definition-4.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_unit(\"fn test() {\n                let tmp = 1;\n                return tmp;\n            }\")"
---
CompilationUnit {
    entry_file_name: "<test>",
    functions: [
        Stmt {
            kind: Fn {
                proto: FnProto {
                    args: [],
                    iden: "test",
                },
                body: Some(
                    Block {
                        stmts: [
                            Stmt {
                                kind: Let {
                                    iden: "tmp",
                                    initializer: Expr {
                                        kind: Literal(
                                            1,
                                        ),
                                    },
                                },
                            },
                            Stmt {
                                kind: Return {
                                    value: Expr {
                                        kind: Identifier(
                                            "tmp",
                                        ),
                                    },
                                },
                            },
                        ],
                    },
                ),
            },
        },
    ],
}
