owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_fn_definition-6.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_unit(\"fn comments() {\n                // this is a comment\n                // return 0;\n                return 1;\n            }\")"
---
CompilationUnit {
    entry_file_name: "<test>",
    functions: [
        Stmt {
            kind: Fn {
                proto: FnProto {
                    args: [],
                    iden: "comments",
                },
                body: Some(
                    Block {
                        stmts: [
                            Stmt {
                                kind: Return {
                                    value: Expr {
                                        kind: Literal(
                                            1,
                                        ),
                                        span: Span {
                                            lo: BytePos(
                                                105,
                                            ),
                                            hi: BytePos(
                                                106,
                                            ),
                                        },
                                    },
                                },
                                span: Span {
                                    lo: BytePos(
                                        98,
                                    ),
                                    hi: BytePos(
                                        106,
                                    ),
                                },
                            },
                        ],
                    },
                ),
            },
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    121,
                ),
            },
        },
    ],
}
