owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_function_call-2.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"my_function(10)\")"
---
Expr {
    kind: FuncCall {
        callee: "my_function",
        args: [
            Expr {
                kind: Literal(
                    10,
                ),
                span: Span {
                    lo: BytePos(
                        12,
                    ),
                    hi: BytePos(
                        14,
                    ),
                },
            },
        ],
    },
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            15,
        ),
    },
}
