owlc-parser/src/snapshots/owlc_parser__parser__tests__parse_function_call-4.snap
---
source: owlc-parser/src/parser.rs
expression: "parse_str_as_expr(\"func(nested_func())\")"
---
Expr {
    kind: FuncCall {
        callee: "func",
        args: [
            Expr {
                kind: FuncCall {
                    callee: "nested_func",
                    args: [],
                },
            },
        ],
    },
}
